# EmbeddedGfx

./: CMakeLists.txt  CMakePresets.json  readme.md
examples/: CMakeLists.txt
examples/buffered-canvas-bw/: CMakeLists.txt  canvas.cpp
examples/buffered-canvas-page-bw/: CMakeLists.txt  canvas.cpp
examples/buffered-canvas-rgb565/: CMakeLists.txt  canvas.cpp
examples/canvas-console/: CMakeLists.txt  canvas.cpp
examples/unbuffered-canvas-bw/: CMakeLists.txt  canvas.cpp
include/: Canvas.hpp  Circle.hpp  Drawable.hpp  Ellipse.hpp  Font.hpp  Line.hpp  Polygon.hpp  Rectangle.hpp  Shape.hpp  Square.hpp  Text.hpp  Triangle.hpp  Vector2D.hpp
include/EmbeddedGfx/: BufferedCanvas.hpp  Canvas.hpp  Circle.hpp  Colors.hpp  Drawable.hpp  Ellipse.hpp  Font.hpp  Line.hpp  Polygon.hpp  Rectangle.hpp  Shape.hpp  Text.hpp  Triangle.hpp  UnbufferedCanvas.hpp  Vector2D.hpp
